Directly attach ax tree to contents view of focused window

- Remove focus stealer and directly attach ax tree to contents view of
  widget delegate of focused widget.
- Returns contents view of widget delegate as focused view if no view is
  focused.

Bug: 852653
Test: Enable ChromeVox arc native support and confirm that it works.
Change-Id: I22feb9c79e54653a037a2b78b729d76fcbb29fa2
Reviewed-on: https://chromium-review.googlesource.com/1103982
Commit-Queue: Yuki Awano <yawano@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570585}
Former-commit-id: c9c23766b5e7cd47c4a8ce29e6c67c5161d69017